Mon Apr 30 19:46:47 BST 2012  Lee Noar  <leenoar@sky.com>

	* som_runcom.c(register_dynamic_loader): When copying the R/W
	segment, don't include the .bss section.

Mon Apr 30 19:24:23 BST 2012  Lee Noar  <leenoar@sky.com>

	* som_register.c(init_object): The end address shouldn't include
	the .bss section as it only exists in the client copy.

Tue Apr 10 01:59:38 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* som_os_swis.h (ddeutils_get_cl_size): Change return type into size_t.
	* som_runcom.c (command_run): Minor optimisation concerning dde
	handling.  Call OS_FSControl,2 before loading ELF data in
	application memory and introduce a point of no return for error
	reporting.  Solves bug #224.

Sun Apr  8 19:01:47 BST 2012  Lee Noar  <leenoar@sky.com>

	* som_runcom.c(register_client): Fix uninitialised member
	of som_objinfo structure.

Sat Apr  7 20:01:05 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile.am (CMUNGEFLAGS): Add PACKAGE_VERSION define.
	* somanager.cmhg (help-string): Use PACKAGE_VERSION for
	version number (which get defined from configure.ac).

Sat Apr  7 19:22:52 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* configure.ac: Change version number to 2.10.
	* somanager.cmhg: Update copyright year list.

Fri Mar 23 20:16:46 GMT 2012  Lee Noar  <leenoar@sky.com>

	* som_command.c(command_status_libraries): When
	printing the size of the R/W segment, don't include
	the bss section. The bss section is only created in
	the client's copy of the R/W segment.

Mon Mar 12 17:57:14 2012  Lee Noar  <leenoar@sky.com>

	* som_register.c(som_register_client): Add support for
	clients built with GCC 4.1.*.
	(som_register_sharedobject): Add support for libraries
	built with GCC 4.1.*.
	* som.h: Define symbols specific to GCC 4.1.*.
	* som_runcom.c(setup_aux_array): Pass ELF header flags
	to dynamic linker in auxillary array (this is where the
	type of floating point system is defined).
	* som_workspace.h: Define a symbol to give the address